--- a/content/publication/aaai-15/cite.bib
+++ b/content/publication/aaai-15/cite.bib
@@ -6,6 +6,6 @@
  pages = {290--296},
  publisher = {},
  title = {Recommending Positive Links in Signed Social Networks by Optimizing a Generalized AUC},
- year = {2015}
+ year = {January 2015}
 }
 
