--- a/content/publication/aaai-19/cite.bib
+++ b/content/publication/aaai-19/cite.bib
@@ -6,6 +6,6 @@
  pages = {1,409--1,416},
  publisher = {},
  title = {A Deep Neural Network for Unsupervised Anomaly  Detection  and  Diagnosis  in  Multivariate  Time  Series  Data},
- year = {2019}
+ year = {January 2019}
 }
 
