--- a/content/publication/aaai-20-b/cite.bib
+++ b/content/publication/aaai-20-b/cite.bib
@@ -5,7 +5,7 @@
  editor = {},
  pages = {},
  publisher = {},
- title = {Tensorized  LSTM  with  Adaptive  Shared  Memory  for  LearningTrends in Multivariate Time Series},
- year = {2020}
+ title = {Tensorized  LSTM  with  Adaptive  Shared  Memory  for  Learning Trends in Multivariate Time Series},
+ year = {February 2020}
 }
 
