--- a/content/publication/asonam-14/cite.bib
+++ b/content/publication/asonam-14/cite.bib
@@ -6,6 +6,6 @@
  pages = {82--90},
  publisher = {},
  title = {A Model of Consistent Node Types in Signed Directed Social Networks},
- year = {2014}
+ year = {August 2014}
 }
 
