--- a/content/publication/bit-data-17/cite.bib
+++ b/content/publication/bit-data-17/cite.bib
@@ -6,6 +6,6 @@
  pages = {},
  publisher = {},
  title = {Learning Structured and Interpretable Nonlinear Relationship in Complex Physical Systems},
- year = {2017}
+ year = {December 2017}
 }
 
