--- a/content/publication/dcc-15/cite.bib
+++ b/content/publication/dcc-15/cite.bib
@@ -6,6 +6,6 @@
  pages = {353--362},
  publisher = {},
  title = {Rank Preserving Hashing for Rapid Image Search},
- year = {2015}
+ year = {Apirl 2015}
 }
 
