--- a/content/publication/ecml-20/cite.bib
+++ b/content/publication/ecml-20/cite.bib
@@ -6,6 +6,6 @@
  pages = {},
  publisher = {},
  title = {Node Classification in Temporal Graphs through Stochastic Sparsification and Temporal Structural Convolution},
- year = {2020}
+ year = {September 2020}
 }
 
