--- a/content/publication/iccv-15/cite.bib
+++ b/content/publication/iccv-15/cite.bib
@@ -6,6 +6,6 @@
  pages = {1,922--1,930},
  publisher = {},
  title = {Top Rank Supervised Binary Coding for Visual Search},
- year = {2015}
+ year = {December 2015}
 }
 
