--- a/content/publication/icdm-15/cite.bib
+++ b/content/publication/icdm-15/cite.bib
@@ -6,6 +6,6 @@
  pages = {389--398},
  publisher = {},
  title = {Top-$k$ Link Recommendation in Social Networks},
- year = {2015}
+ year = {November 2015}
 }
 
