--- a/content/publication/icdm-17/cite.bib
+++ b/content/publication/icdm-17/cite.bib
@@ -6,6 +6,6 @@
  pages = {1,003-1,008},
  publisher = {},
  title = {Identifying  Multiple  Causal  Anomalies  by  Modeling  Local  Propagations},
- year = {2017}
+ year = {November 2017}
 }
 
