--- a/content/publication/icip-09/cite.bib
+++ b/content/publication/icip-09/cite.bib
@@ -6,6 +6,6 @@
  pages = {2,457--2,460},
  publisher = {},
  title = {Discriminative Geometry Preserving Projections},
- year = {2009}
+ year = {November 2009}
 }
 
