--- a/content/publication/icml-20/cite.bib
+++ b/content/publication/icml-20/cite.bib
@@ -6,6 +6,6 @@
  pages = {},
  publisher = {},
  title = {Robust Graph Representation Learning via Neural Sparsification},
- year = {2020}
+ year = {July 2020}
 }
 
