--- a/content/publication/icmr-20/cite.bib
+++ b/content/publication/icmr-20/cite.bib
@@ -6,6 +6,6 @@
  pages = {},
  publisher = {},
  title = {At the speed of sound efficient audio scene classification},
- year = {2020}
+ year = {October 2020}
 }
 
