--- a/content/publication/ijcai-17-a/cite.bib
+++ b/content/publication/ijcai-17-a/cite.bib
@@ -6,6 +6,6 @@
  pages = {2,627-2,633},
  publisher = {},
  title = {A Dual-Stage  Attention-Based  Recurrent  Neural  Network for  Time  Series Prediction},
- year = {2017}
+ year = {August 2017}
 }
 
