--- a/content/publication/ijcai-17-b/cite.bib
+++ b/content/publication/ijcai-17-b/cite.bib
@@ -6,6 +6,6 @@
  pages = {2,479-2,485},
  publisher = {},
  title = {Exemplar-Centered Supervised Shallow Para-metric  Data  Embedding},
- year = {2017}
+ year = {August 2017}
 }
 
