--- a/content/publication/kdd-15/cite.bib
+++ b/content/publication/kdd-15/cite.bib
@@ -6,6 +6,6 @@
  pages = {1,105--1,114},
  publisher = {},
  title = {Efficient Latent Link Recommendation in Signed Networks},
- year = {2015}
+ year = {August 2015}
 }
 
