--- a/content/publication/kdd-18-a/cite.bib
+++ b/content/publication/kdd-18-a/cite.bib
@@ -5,7 +5,7 @@
  editor = {},
  pages = {2,229-2,238},
  publisher = {},
- title = {Deepr-th Root of Rank Supervised  Binary  Embedding  for  Multivariate  Time  Series  Retrieval},
- year = {2018}
+ title = {Deep r-th Root of Rank Supervised  Binary  Embedding  for  Multivariate  Time  Series  Retrieval},
+ year = {August 2018}
 }
 
