--- a/content/publication/kdd-18-b/cite.bib
+++ b/content/publication/kdd-18-b/cite.bib
@@ -6,6 +6,6 @@
  pages = {2,663-2,671},
  publisher = {},
  title = {Learning  Deep  Network  Representations  with  Adversarially  Regularized Autoencoders},
- year = {2018}
+ year = {August 2018}
 }
 
