--- a/content/publication/kdd-19-b/cite.bib
+++ b/content/publication/kdd-19-b/cite.bib
@@ -6,6 +6,6 @@
  pages = {1,141--1,151},
  publisher = {},
  title = {Multi-task Recurrent Neural Network and Higher-order Markov Random Fields for Stock Price Prediction},
- year = {2019}
+ year = {August 2019}
 }
 
