--- a/content/publication/net-mob-13/cite.bib
+++ b/content/publication/net-mob-13/cite.bib
@@ -5,7 +5,7 @@
  editor = {},
  pages = {},
  publisher = {},
- title = {Analyzing Social Divisions Using Cell Phone Data.},
- year = {2013}
+ title = {Analyzing Social Divisions Using Cell Phone Data},
+ year = {May 2013}
 }
 
