--- a/content/publication/nipsw-14/cite.bib
+++ b/content/publication/nipsw-14/cite.bib
@@ -6,6 +6,6 @@
  pages = {},
  publisher = {},
  title = {Fast Nonnegative Matrix Factorization with Rank-one ADMM},
- year = {2014}
+ year = {December 2014}
 }
 
