--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -4,7 +4,7 @@
 @inproceedings{ICML20,
  author    = {Cheng Zheng and Bo Zong and Wei Cheng and Dongjin Song and Jingchao Ni and Wenchao Yu and Haifeng Chen and Wei Wang},
  title     = {Robust Graph Representation Learning via Neural Sparsification},
- year      = {2020},
+ year      = {July 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of the 37th International Conference on Machine Learning (ICML)},
@@ -14,8 +14,8 @@
 
 @inproceedings{AAAI20a,
  author    = {Dixian Zhu* and Dongjin Song and Yuncong Chen and Cristian Lumezanu and Wei Cheng and Bo Zong and Jingchao Ni and  Takehiko  Mizoguchi and  Tianbao  Yang  and  Haifeng  Chen},
- title     = {Deep  Unsupervised  Binary  CodingNetworks  for  Multivariate  Time  Series  Retrieval},
- year      = {2020},
+ title     = {Deep  Unsupervised  Binary  Coding Networks  for  Multivariate  Time  Series  Retrieval},
+ year      = {February 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of the 34th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
@@ -25,8 +25,8 @@
 
 @inproceedings{AAAI20b,
  author    = {Dongkuan  Xu and  Wei  Cheng and  Bo  Zong and Dongjin  Song and  Jingchao  Ni and  Wenchao  Yu and Yanchi  Liu and Haifeng Chen and Xiang Zhang},
- title     = {Tensorized  LSTM  with  Adaptive  Shared  Memory  for  LearningTrends in Multivariate Time Series},
- year      = {2020},
+ title     = {Tensorized  LSTM  with  Adaptive  Shared  Memory  for  Learning Trends in Multivariate Time Series},
+ year      = {February 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of the 34th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
@@ -35,9 +35,9 @@
 }
 
 @inproceedings{AAAI20c,
- author    = { Xin  Dong and Jingchao  Ni and Wei  Cheng and  Zhengzhang  Chen and  Bo  Zong and Dongjin  Song and Yanchi  Liu and Haifeng  Chen  and  Gerard  de  Melo },
+ author    = {Xin  Dong and Jingchao  Ni and Wei  Cheng and  Zhengzhang  Chen and  Bo  Zong and Dongjin  Song and Yanchi  Liu and Haifeng  Chen  and  Gerard  de  Melo },
  title     = {Asymmetrical  Hierarchical  Networks  with  Attentive  Interactions  for  Interpretable  Review-based  Recommendation},
- year      = {2020},
+ year      = {February 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of the 34th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
@@ -48,7 +48,7 @@
 @inproceedings{ECML20,
  author    = {Cheng Zheng and Bo Zong and Wei Cheng and Dongjin Song and Jingchao Ni and Wenchao Yu and Haifeng Chen and Wei Wang},
  title     = {Node Classification in Temporal Graphs through Stochastic Sparsification and Temporal Structural Convolution},
- year      = {2020},
+ year      = {September 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD)},
@@ -59,7 +59,7 @@
 @inproceedings{ICLR20a,
  author    = {Licheng Wang and Bo Zong and Qianqian Ma and Wei Cheng and Jingchao Ni and Wenchao Yu and Yanchi Liu and Dongjin Song and  Haifeng  Chen and  Yun  Fu},
  title     = {Inductive  and  Unsupervised  Representation  Learning  on  Graph Structured Objects},
- year      = {2020},
+ year      = {Apirl 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of International Conference on Learning Representations (ICLR)},
@@ -71,7 +71,7 @@
 @inproceedings{ICMR20,
  author    = {Bo Dong and Cristian Lumezanu and Yuncong Chen and Dongjin Song and Takehiko Mizoguchi and Haifeng Chen and Latifur Khan},
  title     = {At the speed of sound efficient audio scene classification},
- year      = {2020},
+ year      = {October 2020},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of ACM International Conference on Multimedia Retrieval (ICMR)},
@@ -83,7 +83,7 @@
 @inproceedings{KDD19a,
  author    = {Chuxu Zhang* and Dongjin Song and Chao Huang and Ananthram Swami and Nitesh V. Chawla},
  title     = {Heterogeneous Graph Neural Network},
- year      = {2019},
+ year      = {August 2019},
  pages     = {793--803},
  editor    = {},
  booktitle     = {Proceedings  of  the  25th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
@@ -94,7 +94,7 @@
 @inproceedings{KDD19b,
  author    = {Chang Li* and Dongjin  Song and Dacheng Tao},
  title     = {Multi-task Recurrent Neural Network and Higher-order Markov Random Fields for Stock Price Prediction},
- year      = {2019},
+ year      = {August 2019},
  pages     = {1,141--1,151},
  editor    = {},
  booktitle     = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery  and  Data  Mining  (KDD)},
@@ -105,7 +105,7 @@
 @inproceedings{AAAI19,
  author    = {Chuxu Zhang* and Dongjin Song and Yuncong Chen and Xinyang Feng and Cristian Lumezanu and Wei Cheng and Bo Zong and Jingchao Ni and Haifeng Chen and Nitesh Chawla},
  title     = {A Deep Neural Network for Unsupervised Anomaly  Detection  and  Diagnosis  in  Multivariate  Time  Series  Data},
- year      = {2019},
+ year      = {January 2019},
  pages     = {1,409--1,416},
  editor    = {},
  booktitle     = {Proceedings of the 33rd AAAI Conference on Advance of Artificial Intelligence (AAAI)},
@@ -116,7 +116,7 @@
 @inproceedings{SDM19,
  author    = {Dongkuan Xu and Wei Cheng and Bo Zong and Jingchao Ni and Dongjin Song and Wenchao Yu and Yuncong Chen and Xiang Zhang and Haifeng Chen},
  title     = {Deep Co-Clustering},
- year      = {2019},
+ year      = {May 2019},
  pages     = {414--422},
  editor    = {},
  booktitle     = {Proceedings of SIAM International Conference on Data Mining (SDM)},
@@ -126,8 +126,8 @@
 
 @inproceedings{KDD18a,
  author    = {Dongjin Song and Ning Xia and Wei Cheng and Haifeng Chen and Dacheng Tao},
- title     = {Deepr-th Root of Rank Supervised  Binary  Embedding  for  Multivariate  Time  Series  Retrieval},
- year      = {2018},
+ title     = {Deep r-th Root of Rank Supervised  Binary  Embedding  for  Multivariate  Time  Series  Retrieval},
+ year      = {August 2018},
  pages     = {2,229-2,238},
  editor    = {},
  booktitle     = {Proceedings  of  the  24th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
@@ -138,7 +138,7 @@
 @inproceedings{KDD18b,
  author    = {Wenchao  Yu and  Cheng  Zhen and  Wei  Cheng and  Charu  Aggarwal and Dongjin  Song and Bo  Zong and  Haifeng Chen  and  Wei  Wang},
  title     = {Learning  Deep  Network  Representations  with  Adversarially  Regularized Autoencoders},
- year      = {2018},
+ year      = {August 2018},
  pages     = {2,663-2,671},
  editor    = {},
  booktitle     = {Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery  and  Data  Mining  (KDD)},
@@ -149,7 +149,7 @@
 @inproceedings{IJCAI17a,
  author    = {Yao Qin* and Dongjin Song and Haifeng Chen and Wei Cheng and Guofei Jiang and Garrison W. Cottrel},
  title     = {A Dual-Stage  Attention-Based  Recurrent  Neural  Network for  Time  Series Prediction},
- year      = {2017},
+ year      = {August 2017},
  pages     = {2,627-2,633},
  editor    = {},
  booktitle     = {Proceedings of  the  26th  International  Joint  Conference  on  Artificial  Intelligence  (IJCAI)},
@@ -160,7 +160,7 @@
 @inproceedings{IJCAI17b,
  author    = {Renqiang Min and Hongyu Guo and Dongjin Song},
  title     = {Exemplar-Centered Supervised Shallow Para-metric  Data  Embedding},
- year      = {2017},
+ year      = {August 2017},
  pages     = {2,479-2,485},
  editor    = {},
  booktitle     = {Proceedings  of  the  26th  International  Joint  Conference  on  Artificial Intelligence (IJCAI)},
@@ -171,7 +171,7 @@
 @inproceedings{ICDM17,
  author    = {Jingchao Ni and Wei Cheng and Kai Zhang and Dongjin Song and Tan Yan and Haifeng Chen and Xiang Zhang},
  title     = {Identifying  Multiple  Causal  Anomalies  by  Modeling  Local  Propagations},
- year      = {2017},
+ year      = {November 2017},
  pages     = {1,003-1,008},
  editor    = {},
  booktitle     = {Proceedings  of  IEEE International Conference on Data Mining (ICDM)},
@@ -182,7 +182,7 @@
 @inproceedings{BitData17,
  author    = {Tingyang  Xu and  Tan  Yan and Dongjin  Song and  Wei  Cheng and  Haifeng  Chen and  Guofei  Jiang  and  JinboBi},
  title     = {Learning Structured and Interpretable Nonlinear Relationship in Complex Physical Systems},
- year      = {2017},
+ year      = {December 2017},
  pages     = {},
  editor    = {},
  booktitle     = {Proceedings of IEEE Big Data},
@@ -193,7 +193,7 @@
 @inproceedings{IJCAI16,
  author    = {Dongjin Song and Wei Liu and David A. Meyer},
  title     = {Fast Structural Binary Coding},
- year      = {2016},
+ year      = {July 2016},
  pages     = {2,018--2,024},
  editor    = {},
  booktitle     = {Proceedings of International Joint Conference on Artificial Intelligence (IJCAI)},
@@ -204,7 +204,7 @@
 @inproceedings{KDD15,
  author    = {Dongjin Song and David A. Meyer and Dacheng Tao},
  title     = {Efficient Latent Link Recommendation in Signed Networks},
- year      = {2015},
+ year      = {August 2015},
  pages     = {1,105--1,114},
  editor    = {},
  booktitle     = {Proceedings of the 21st ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
@@ -215,7 +215,7 @@
 @inproceedings{ICCV15,
  author    = {Dongjin Song and Wei Liu and Rongrong Ji and David A. Meyer and John R. Smith},
  title     = {Top Rank Supervised Binary Coding for Visual Search},
- year      = {2015},
+ year      = {December 2015},
  pages     = {1,922--1,930},
  editor    = {},
  booktitle     = {Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
@@ -226,7 +226,7 @@
 @inproceedings{AAAI15,
  author    = {Dongjin Song and David A. Meyer},
  title     = {Recommending Positive Links in Signed Social Networks by Optimizing a Generalized AUC},
- year      = {2015},
+ year      = {January 2015},
  pages     = {290--296},
  editor    = {},
  booktitle     = {Proceedings of 29th AAAI Conference on Artificial Intelligence (AAAI)},
@@ -237,7 +237,7 @@
 @inproceedings{ICDM15,
  author    = {Dongjin Song and David A. Meyer and Dacheng Tao},
  title     = {Top-$k$ Link Recommendation in Social Networks},
- year      = {2015},
+ year      = {November 2015},
  pages     = {389--398},
  editor    = {},
  booktitle     = {Proceedings of the IEEE International Conference on Data Mining (ICDM)},
@@ -248,7 +248,7 @@
 @inproceedings{DCC15,
  author    = {Dongjin  Song and Wei Liu and David A. Meyer and Dacheng Tao and Rongrong Ji},
  title     = {Rank Preserving Hashing for Rapid Image Search},
- year      = {2015},
+ year      = {Apirl 2015},
  pages     = {353--362},
  editor    = {},
  booktitle     = {Proceedings of Data Compression Conference (DCC)},
@@ -260,7 +260,7 @@
   author =   "Dongjin Song and Wei Liu and Tianyi Zhou and Dacheng Tao and David A. Meyer",
   title =    "Efficient Robust Conditional Random Fields",
   journal =  "IEEE Transactions on Image Processing (T-IP)",
-  year =     "2015",
+  year =     "June 2015",
   volume =   "24",
   number =   "10",
   pages =    "3124--3136"
@@ -289,7 +289,7 @@
 @inproceedings{ASONAM14,
  author    = {Dongjin  Song and David A. Meyer},
  title     = {A Model of Consistent Node Types in Signed Directed Social Networks},
- year      = {2014},
+ year      = {August 2014},
  pages     = {82--90},
  editor    = {},
  booktitle     = {Proceedings of IEEE/ACM International Conference on Advances in Social Network Analysis and Mining (ASONAM)},
@@ -300,7 +300,7 @@
 @inproceedings{NIPSW14,
  author    = {Dongjin  Song and David A. Meyer and Martin Renqiang Min},
  title     = {Fast Nonnegative Matrix Factorization with Rank-one ADMM},
- year      = {2014},
+ year      = {December 2014},
  pages     = {},
  editor    = {},
  booktitle     = {NIPS Workshop on Optimization for Machine Learning (OPT)},
@@ -311,7 +311,7 @@
 @inproceedings{ICIP09,
  author    = {Dongjin  Song and Dacheng Tao},
  title     = {Discriminative Geometry Preserving Projections},
- year      = {2009},
+ year      = {November 2009},
  pages     = {2,457--2,460},
  editor    = {},
  booktitle     = {Proceedings of  IEEE International Conference on Image Processing (ICIP)},
@@ -322,7 +322,7 @@
 @inproceedings{ICPR08,
  author    = {Dongjin  Song and Dacheng Tao},
  title     = {C1 Units for Scene Classification},
- year      = {2008},
+ year      = {December 2008},
  pages     = {1--4},
  editor    = {},
  booktitle     = {Proceedings of the 19th IEEE International Conference of Pattern Recognition (ICPR)},
@@ -332,8 +332,8 @@
 
 @inproceedings{NetMob13,
  author    = {Orest Bucicovschi and Rex W. Douglass and David A. Meyer and Megha Ram and David Rideout and Dongjin Song},
- title     = {Analyzing Social Divisions Using Cell Phone Data.},
- year      = {2013},
+ title     = {Analyzing Social Divisions Using Cell Phone Data},
+ year      = {May 2013},
  pages     = {},
  editor    = {},
  booktitle     = {Netmob special session on Data for Development (D4D) Data Challenge},
@@ -345,7 +345,7 @@
   author =   "Dongjin Song and Dacheng Tao",
   title =    "Biologically Inspired Feature Manifold for Scene Classification",
   journal =  "IEEE Transactions on Image Processing (T-IP)",
-  year =     "2010",
+  year =     "September 2010",
   volume =   "19",
   number =   "1",
   pages =    "174--184"
