--- a/content/publication/aaai-20-a/cite.bib
+++ b/content/publication/aaai-20-a/cite.bib
@@ -5,7 +5,7 @@
  editor = {},
  pages = {},
  publisher = {},
- title = {Deep  Unsupervised  Binary  CodingNetworks  for  Multivariate  Time  Series  Retrieval},
- year = {2020}
+ title = {Deep  Unsupervised  Binary  Coding Networks  for  Multivariate  Time  Series  Retrieval},
+ year = {February 2020}
 }
 
