--- a/content/publication/aaai-20-c/cite.bib
+++ b/content/publication/aaai-20-c/cite.bib
@@ -3,9 +3,10 @@
  author = {Xin  Dong and Jingchao  Ni and Wei  Cheng and  Zhengzhang  Chen and  Bo  Zong and Dongjin  Song and Yanchi  Liu and Haifeng  Chen  and  Gerard  de  Melo },
  booktitle = {Proceedings of the 34th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
  editor = {},
+ month = {Feburary},
  pages = {},
  publisher = {},
  title = {Asymmetrical  Hierarchical  Networks  with  Attentive  Interactions  for  Interpretable  Review-based  Recommendation},
- year = {February 2020}
+ year = {2020}
 }
 
