--- a/content/publication/icdm-17/cite.bib
+++ b/content/publication/icdm-17/cite.bib
@@ -3,9 +3,10 @@
  author = {Jingchao Ni and Wei Cheng and Kai Zhang and Dongjin Song and Tan Yan and Haifeng Chen and Xiang Zhang},
  booktitle = {Proceedings  of  IEEE International Conference on Data Mining (ICDM)},
  editor = {},
+ month = {November},
  pages = {1,003-1,008},
  publisher = {},
  title = {Identifying  Multiple  Causal  Anomalies  by  Modeling  Local  Propagations},
- year = {November 2017}
+ year = {2017}
 }
 
