--- a/content/publication/iclr-20-a/cite.bib
+++ b/content/publication/iclr-20-a/cite.bib
@@ -3,9 +3,10 @@
  author = {Licheng Wang and Bo Zong and Qianqian Ma and Wei Cheng and Jingchao Ni and Wenchao Yu and Yanchi Liu and Dongjin Song and  Haifeng  Chen and  Yun  Fu},
  booktitle = {Proceedings of International Conference on Learning Representations (ICLR)},
  editor = {},
+ month = {April},
  pages = {},
  publisher = {},
  title = {Inductive  and  Unsupervised  Representation  Learning  on  Graph Structured Objects},
- year = {Apirl 2020}
+ year = {2020}
 }
 
