--- a/content/publication/icmr-20/cite.bib
+++ b/content/publication/icmr-20/cite.bib
@@ -3,9 +3,10 @@
  author = {Bo Dong and Cristian Lumezanu and Yuncong Chen and Dongjin Song and Takehiko Mizoguchi and Haifeng Chen and Latifur Khan},
  booktitle = {Proceedings of ACM International Conference on Multimedia Retrieval (ICMR)},
  editor = {},
+ month = {October},
  pages = {},
  publisher = {},
  title = {At the speed of sound efficient audio scene classification},
- year = {October 2020}
+ year = {2020}
 }
 
