--- a/content/publication/icpr-08/cite.bib
+++ b/content/publication/icpr-08/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin  Song and Dacheng Tao},
  booktitle = {Proceedings of the 19th IEEE International Conference of Pattern Recognition (ICPR)},
  editor = {},
+ month = {December},
  pages = {1--4},
  publisher = {},
  title = {C1 Units for Scene Classification},
- year = {December 2008}
+ year = {2008}
 }
 
