--- a/content/publication/ijcai-16/cite.bib
+++ b/content/publication/ijcai-16/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and Wei Liu and David A. Meyer},
  booktitle = {Proceedings of International Joint Conference on Artificial Intelligence (IJCAI)},
  editor = {},
+ month = {July},
  pages = {2,018--2,024},
  publisher = {},
  title = {Fast Structural Binary Coding},
- year = {July 2016}
+ year = {2016}
 }
 
