--- a/content/publication/ijcai-17-b/cite.bib
+++ b/content/publication/ijcai-17-b/cite.bib
@@ -3,9 +3,10 @@
  author = {Renqiang Min and Hongyu Guo and Dongjin Song},
  booktitle = {Proceedings  of  the  26th  International  Joint  Conference  on  Artificial Intelligence (IJCAI)},
  editor = {},
+ month = {August},
  pages = {2,479-2,485},
  publisher = {},
  title = {Exemplar-Centered Supervised Shallow Para-metric  Data  Embedding},
- year = {August 2017}
+ year = {2017}
 }
 
