--- a/content/publication/kdd-15/cite.bib
+++ b/content/publication/kdd-15/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and David A. Meyer and Dacheng Tao},
  booktitle = {Proceedings of the 21st ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
  editor = {},
+ month = {August},
  pages = {1,105--1,114},
  publisher = {},
  title = {Efficient Latent Link Recommendation in Signed Networks},
- year = {August 2015}
+ year = {2015}
 }
 
