--- a/content/publication/kdd-18-a/cite.bib
+++ b/content/publication/kdd-18-a/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and Ning Xia and Wei Cheng and Haifeng Chen and Dacheng Tao},
  booktitle = {Proceedings  of  the  24th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
  editor = {},
+ month = {August},
  pages = {2,229-2,238},
  publisher = {},
  title = {Deep r-th Root of Rank Supervised  Binary  Embedding  for  Multivariate  Time  Series  Retrieval},
- year = {August 2018}
+ year = {2018}
 }
 
