--- a/content/publication/kdd-19-b/cite.bib
+++ b/content/publication/kdd-19-b/cite.bib
@@ -3,9 +3,10 @@
  author = {Chang Li* and Dongjin  Song and Dacheng Tao},
  booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery  and  Data  Mining  (KDD)},
  editor = {},
+ month = {August},
  pages = {1,141--1,151},
  publisher = {},
  title = {Multi-task Recurrent Neural Network and Higher-order Markov Random Fields for Stock Price Prediction},
- year = {August 2019}
+ year = {2019}
 }
 
