--- a/content/publication/net-mob-13/cite.bib
+++ b/content/publication/net-mob-13/cite.bib
@@ -3,9 +3,10 @@
  author = {Orest Bucicovschi and Rex W. Douglass and David A. Meyer and Megha Ram and David Rideout and Dongjin Song},
  booktitle = {Netmob special session on Data for Development (D4D) Data Challenge},
  editor = {},
+ month = {May},
  pages = {},
  publisher = {},
  title = {Analyzing Social Divisions Using Cell Phone Data},
- year = {May 2013}
+ year = {2013}
 }
 
