--- a/content/publication/nipsw-14/cite.bib
+++ b/content/publication/nipsw-14/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin  Song and David A. Meyer and Martin Renqiang Min},
  booktitle = {NIPS Workshop on Optimization for Machine Learning (OPT)},
  editor = {},
+ month = {December},
  pages = {},
  publisher = {},
  title = {Fast Nonnegative Matrix Factorization with Rank-one ADMM},
- year = {December 2014}
+ year = {2014}
 }
 
