--- a/content/publication/sdm-19/cite.bib
+++ b/content/publication/sdm-19/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongkuan Xu and Wei Cheng and Bo Zong and Jingchao Ni and Dongjin Song and Wenchao Yu and Yuncong Chen and Xiang Zhang and Haifeng Chen},
  booktitle = {Proceedings of SIAM International Conference on Data Mining (SDM)},
  editor = {},
+ month = {May},
  pages = {414--422},
  publisher = {},
  title = {Deep Co-Clustering},
- year = {May 2019}
+ year = {2019}
 }
 
