--- a/content/publication/aaai-15/cite.bib
+++ b/content/publication/aaai-15/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and David A. Meyer},
  booktitle = {Proceedings of 29th AAAI Conference on Artificial Intelligence (AAAI)},
  editor = {},
+ month = {January},
  pages = {290--296},
  publisher = {},
  title = {Recommending Positive Links in Signed Social Networks by Optimizing a Generalized AUC},
- year = {January 2015}
+ year = {2015}
 }
 
