--- a/content/publication/aaai-20-a/cite.bib
+++ b/content/publication/aaai-20-a/cite.bib
@@ -3,9 +3,10 @@
  author = {Dixian Zhu* and Dongjin Song and Yuncong Chen and Cristian Lumezanu and Wei Cheng and Bo Zong and Jingchao Ni and  Takehiko  Mizoguchi and  Tianbao  Yang  and  Haifeng  Chen},
  booktitle = {Proceedings of the 34th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
  editor = {},
+ month = {Feburary},
  pages = {},
  publisher = {},
  title = {Deep  Unsupervised  Binary  Coding Networks  for  Multivariate  Time  Series  Retrieval},
- year = {February 2020}
+ year = {2020}
 }
 
