--- a/content/publication/asonam-14/cite.bib
+++ b/content/publication/asonam-14/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin  Song and David A. Meyer},
  booktitle = {Proceedings of IEEE/ACM International Conference on Advances in Social Network Analysis and Mining (ASONAM)},
  editor = {},
+ month = {August},
  pages = {82--90},
  publisher = {},
  title = {A Model of Consistent Node Types in Signed Directed Social Networks},
- year = {August 2014}
+ year = {2014}
 }
 
