--- a/content/publication/bit-data-17/cite.bib
+++ b/content/publication/bit-data-17/cite.bib
@@ -3,9 +3,10 @@
  author = {Tingyang  Xu and  Tan  Yan and Dongjin  Song and  Wei  Cheng and  Haifeng  Chen and  Guofei  Jiang  and  JinboBi},
  booktitle = {Proceedings of IEEE Big Data},
  editor = {},
+ month = {December},
  pages = {},
  publisher = {},
  title = {Learning Structured and Interpretable Nonlinear Relationship in Complex Physical Systems},
- year = {December 2017}
+ year = {2017}
 }
 
