--- a/content/publication/dcc-15/cite.bib
+++ b/content/publication/dcc-15/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin  Song and Wei Liu and David A. Meyer and Dacheng Tao and Rongrong Ji},
  booktitle = {Proceedings of Data Compression Conference (DCC)},
  editor = {},
+ month = {April},
  pages = {353--362},
  publisher = {},
  title = {Rank Preserving Hashing for Rapid Image Search},
- year = {Apirl 2015}
+ year = {2015}
 }
 
