--- a/content/publication/iccv-15/cite.bib
+++ b/content/publication/iccv-15/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and Wei Liu and Rongrong Ji and David A. Meyer and John R. Smith},
  booktitle = {Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
  editor = {},
+ month = {December},
  pages = {1,922--1,930},
  publisher = {},
  title = {Top Rank Supervised Binary Coding for Visual Search},
- year = {December 2015}
+ year = {2015}
 }
 
