--- a/content/publication/icdm-15/cite.bib
+++ b/content/publication/icdm-15/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin Song and David A. Meyer and Dacheng Tao},
  booktitle = {Proceedings of the IEEE International Conference on Data Mining (ICDM)},
  editor = {},
+ month = {November},
  pages = {389--398},
  publisher = {},
  title = {Top-$k$ Link Recommendation in Social Networks},
- year = {November 2015}
+ year = {2015}
 }
 
