--- a/content/publication/icip-09/cite.bib
+++ b/content/publication/icip-09/cite.bib
@@ -3,9 +3,10 @@
  author = {Dongjin  Song and Dacheng Tao},
  booktitle = {Proceedings of  IEEE International Conference on Image Processing (ICIP)},
  editor = {},
+ month = {November},
  pages = {2,457--2,460},
  publisher = {},
  title = {Discriminative Geometry Preserving Projections},
- year = {November 2009}
+ year = {2009}
 }
 
