--- a/content/publication/kdd-19-a/cite.bib
+++ b/content/publication/kdd-19-a/cite.bib
@@ -3,9 +3,10 @@
  author = {Chuxu Zhang* and Dongjin Song and Chao Huang and Ananthram Swami and Nitesh V. Chawla},
  booktitle = {Proceedings  of  the  25th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
  editor = {},
+ month = {August},
  pages = {793--803},
  publisher = {},
  title = {Heterogeneous Graph Neural Network},
- year = {August 2019}
+ year = {2019}
 }
 
