--- a/content/publication/tip-10/cite.bib
+++ b/content/publication/tip-10/cite.bib
@@ -5,6 +5,6 @@
  pages = {174--184},
  title = {Biologically Inspired Feature Manifold for Scene Classification},
  volume = {19},
- year = {September 2010}
+ year = {2010}
 }
 
