--- a/content/publication/tip-15/cite.bib
+++ b/content/publication/tip-15/cite.bib
@@ -5,6 +5,6 @@
  pages = {3124--3136},
  title = {Efficient Robust Conditional Random Fields},
  volume = {24},
- year = {June 2015}
+ year = {2015}
 }
 
