--- a/content/publication/icmr-20/cite.bib
+++ b/content/publication/icmr-20/cite.bib
@@ -6,7 +6,6 @@
  month = {October},
  pages = {},
  publisher = {},
- title = {At the speed of sound efficient audio scene classification},
+ title = {At the Speed of Sound Efficient Audio Scene Classification},
  year = {2020}
 }
-
