--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,6 +1,30 @@
 ---
 ---
 
+@inproceedings{AAAI21a,
+ author    = {Yinjun Wu and  Jingchao Ni and Wei Cheng and Bo Zong and Dongjin Song and  Zhengzhang Chen and Yanchi Liu and Xuchao Zhang and Haifeng Chen and Susan Davidson},
+ title     = {Dynamic Gaussian Mixture based Deep Generative Model For Robust Forecasting on Sparse Multivariate Time Series},
+ year      = {2020},
+month     = {Feburary},
+ pages     = {},
+ editor    = {},
+ booktitle     = {To appear in Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
+ address   = {},
+ publisher = {}
+}
+
+@inproceedings{AAAI21b,
+ author    = {Dongkuan  Xu and  Wei  Cheng and Xin Dong and Bo  Zong and Wenchao Yu and Jingchao Ni and Dongjin  Song and  Xuchao Zhang and Haifeng Chen and Xiang Zhang},
+ title     = {Multi-Task Recurrent Modular Networks},
+ year      = {2020},
+month     = {Feburary},
+ pages     = {},
+ editor    = {},
+ booktitle     = {To appear in Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
+ address   = {},
+ publisher = {}
+}
+
 @inproceedings{ICML20,
  author    = {Cheng Zheng and Bo Zong and Wei Cheng and Dongjin Song and Jingchao Ni and Wenchao Yu and Haifeng Chen and Wei Wang},
  title     = {Robust Graph Representation Learning via Neural Sparsification},
