--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,8 +1,21 @@
 ---
 ---
 
+@inproceedings{SDM21,
+ author    = {Dongkuan Xu and Wei Cheng and Jingchao Ni and Dongsheng Luo and Masanao Natsumeda and
+ Dongjin Song and Bo Zong and Haifeng Chen and Xiang Zhang},
+ title     = {Deep Multi-Instance Contrastive Learning with Dual Attention for Anomaly Precursor Detection},
+ year      = {2021},
+month     = {May},
+ pages     = {},
+ editor    = {},
+ booktitle     = {To appear in Proceedings of SIAM International Conference on Data Mining (SDM)},
+ address   = {},
+ publisher = {}
+}
+
 @inproceedings{AAAI21a,
- author    = {Yinjun Wu and  Jingchao Ni and Wei Cheng and Bo Zong and Dongjin Song and  Zhengzhang Chen and Yanchi Liu and Xuchao Zhang and Haifeng Chen and Susan Davidson},
+ author    = {Yinjun Wu and Jingchao Ni and Wei Cheng and Bo Zong and Dongjin Song and  Zhengzhang Chen and Yanchi Liu and Xuchao Zhang and Haifeng Chen and Susan Davidson},
  title     = {Dynamic Gaussian Mixture based Deep Generative Model For Robust Forecasting on Sparse Multivariate Time Series},
  year      = {2021},
 month     = {Feburary},
