--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -21,7 +21,7 @@ month     = {May},
 month     = {Feburary},
  pages     = {},
  editor    = {},
- booktitle     = {To appear in Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
+ booktitle     = {Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
  address   = {},
  publisher = {}
 }
@@ -33,7 +33,7 @@ month     = {Feburary},
 month     = {Feburary},
  pages     = {},
  editor    = {},
- booktitle     = {To appear in Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
+ booktitle     = {Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
  address   = {},
  publisher = {}
 }
