--- a/content/publication/aaai-21-a/cite.bib
+++ b/content/publication/aaai-21-a/cite.bib
@@ -5,7 +5,7 @@
 month     = {February},
  pages     = {},
  editor    = {},
- booktitle     = {To appear in Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
+ booktitle     = {Proceedings of the 35th AAAI Conference on Advance of Artificial Intelligence (AAAI)},
  address   = {},
  publisher = {}
 }
