--- a/content/publication/sdm-21/cite.bib
+++ b/content/publication/sdm-21/cite.bib
@@ -6,7 +6,7 @@
 month     = {May},
  pages     = {},
  editor    = {},
- booktitle     = {To appear in Proceedings of SIAM International Conference on Data Mining (SDM)},
+ booktitle     = {Proceedings of SIAM International Conference on Data Mining (SDM)},
  address   = {},
  publisher = {}
 }
