--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,6 +1,30 @@
 ---
 ---
 
+
+@Article{TOIS2021,
+  author =   "Chuxu Zhang and Huaxiu Yao and Lu Yu and Chao Huang and Dongjin Song and Meng Jiang and Haifeng Chen and Nitesh V. Chawla",
+  title =    "Inductive Contextual Relation Learning for Personalization",
+  journal =  "ACM Transactions on Information Systems (TOIS)",
+  year =     "2021",
+  volume =   "39",
+  issue =   "3",
+  number =   "35",
+  pages =    "1-22"
+}
+
+@inproceedings{CVPR21,
+ author    = {Liang Tong and Zhengzhang Chen and Jingchao Ni and Wei Cheng and Dongjin Song and Haifeng Chen and Yevgeniy Vorobeychik},
+ title     = {FACESEC A Fine-grained Robustness Evaluation Framework for Face Recognition Systems},
+ year      = {2021},
+month     = {June},
+ pages     = {},
+ editor    = {},
+ booktitle     = {Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+ address   = {},
+ publisher = {}
+}
+
 @inproceedings{SDM21,
  author    = {Dongkuan Xu and Wei Cheng and Jingchao Ni and Dongsheng Luo and Masanao Natsumeda and
  Dongjin Song and Bo Zong and Haifeng Chen and Xiang Zhang},
