--- a/content/publication/cikm-21/cite.bib
+++ b/content/publication/cikm-21/cite.bib
@@ -5,7 +5,7 @@
 month     = {November},
  pages     = {},
  editor    = {},
- booktitle     = {Proceedings  of  the  29th  ACM  International  Conference  on Multimedia (MM)},
+ booktitle     = {To appear in Proceedings of the 30th ACM International Conference on Information and Knowledge Management (CIKM)},
  address   = {},
  publisher = {}
 }
