--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,6 +1,30 @@
 ---
 ---
 
+@Article{SAR2022,
+  author =   "Shao-Hao Lu and Mohamadmahdi Samandari and Caihong Li and Huijie Li and Dongjin Song and Yi Zhang and Ali Tamayol and Xueju Wang",
+  title =    "Multimodal sensing and therapeutic systems for wound healing and
+management$:$ A review",
+  journal =  "Sensors and Actuators Reports",
+  year =     "2022",
+  volume =   "4",
+  issue =   "",
+  number =   "",
+  pages =    ""
+}
+
+
+@Article{TNSE2022,
+  author =   "Yang Jiao and Kai Yang and Dongjin Song and Dacheng Tao",
+  title =    "TimeAutoAD$:$ Autonomous Anomaly Detection with Self-supervised Contrastive Loss for Multivariate Time Series",
+  journal =  "IEEE Transactions on Network Science and Engineering (TNSE)",
+  year =     "2022",
+  volume =   "",
+  issue =   "",
+  number =   "",
+  pages =    ""
+}
+
 
 @Article{TOIS2021,
   author =   "Chuxu Zhang and Huaxiu Yao and Lu Yu and Chao Huang and Dongjin Song and Meng Jiang and Haifeng Chen and Nitesh V. Chawla",
