--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+
+@Article{TPAMI2022,
+  author =   "Xikun Zhang and Dongjin Song and Dacheng Tao",
+  title =    "Hierarchical Prototype Networks for Continual Graph Representation Learning",
+  journal =  "IEEE Transactions on Pattern Analysis and Machine Intelligence",
+  year =     "2022",
+  volume =   "",
+  issue =   "",
+  number =   "",
+  pages =    "1-15"
+}
+
 @Article{SAR2022,
   author =   "Shao-Hao Lu and Mohamadmahdi Samandari and Caihong Li and Huijie Li and Dongjin Song and Yi Zhang and Ali Tamayol and Xueju Wang",
   title =    "Multimodal sensing and therapeutic systems for wound healing and
