--- a/public/publication/publications.bib
+++ b/public/publication/publications.bib
@@ -2,6 +2,32 @@
 ---
 
 
+@inproceedings{NeurIPS22b,
+ address = {},
+ author = {Xikun Zhang and Dongjin Song and Dacheng Tao},
+ booktitle = {Proceedings of 36th Conference on Neural Information Processing Systems (NeurIPS) Datasets and Benchmarks Track},
+ editor = {},
+ month = {December},
+ pages = {},
+ publisher = {},
+ title = {CGLB Benchmark Tasks for Continual Graph Learning},
+ year = {2022}
+}
+
+@inproceedings{NeurIPS22a,
+ address = {},
+ author = {Yang Jiao and Kai Yang and Dongjin Song},
+ booktitle = {Proceedings of 36th Conference onNeural Information Processing Systems (NeurIPS)},
+ editor = {},
+ month = {December},
+ pages = {},
+ publisher = {},
+ title = {Distributed Distributionally Robust Optimization with
+Non-Convex Objectives},
+ year = {2022}
+}
+
+
 @Article{TPAMI2022,
   author =   "Xikun Zhang and Dongjin Song and Dacheng Tao",
   title =    "Hierarchical Prototype Networks for Continual Graph Representation Learning",
