--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -27,6 +27,17 @@ Non-Convex Objectives},
  year = {2022}
 }
 
+@inproceedings{ICDM22,
+ address = {},
+ author = {Xikun Zhang and Dongjin Song and Dacheng Tao},
+ booktitle = {Proceedings of IEEE International Conference on Data Mining (ICDM)},
+ editor = {},
+ month = {December},
+ pages = {},
+ publisher = {},
+ title = {Sparsified Subgraph Memory for Continual Graph Learning},
+ year = {2022}
+}
 
 @Article{TPAMI2022,
   author =   "Xikun Zhang and Dongjin Song and Dacheng Tao",
