--- a/content/publication/bigdata-17/cite.bib
+++ b/content/publication/bigdata-17/cite.bib
@@ -1,4 +1,4 @@
-@inproceedings{BitData17,
+@inproceedings{BigData17,
  address = {},
  author = {Tingyang  Xu and  Tan  Yan and Dongjin  Song and  Wei  Cheng and  Haifeng  Chen and  Guofei  Jiang  and  JinboBi},
  booktitle = {Proceedings of IEEE Big Data},
@@ -9,4 +9,3 @@
  title = {Learning Structured and Interpretable Nonlinear Relationship in Complex Physical Systems},
  year = {2017}
 }
-
