--- a/public/publication/publications.bib
+++ b/public/publication/publications.bib
@@ -39,6 +39,18 @@ Non-Convex Objectives},
  year = {2022}
 }
 
+@inproceedings{BigData22,
+ address = {},
+ author = {Wei Zhu and Dongjin Song and Yuncong Chen and Wei Cheng and Bo Zong},
+ booktitle = {Proceedings of IEEE Big Data},
+ editor = {},
+ month = {December},
+ pages = {},
+ publisher = {},
+ title = {Deep Federated Anomaly Detection for Multivariate Time Series Data},
+ year = {2022}
+}
+
 @Article{TPAMI2022,
   author =   "Xikun Zhang and Dongjin Song and Dacheng Tao",
   title =    "Hierarchical Prototype Networks for Continual Graph Representation Learning",
@@ -329,7 +341,7 @@ month     = {Feburary},
  publisher = {}
 }
 
-@inproceedings{BitData17,
+@inproceedings{BigData17,
  author    = {Tingyang  Xu and  Tan  Yan and Dongjin  Song and  Wei  Cheng and  Haifeng  Chen and  Guofei  Jiang  and  JinboBi},
  title     = {Learning Structured and Interpretable Nonlinear Relationship in Complex Physical Systems},
  year      = {2017},
