--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -1,6 +1,104 @@
 ---
 ---
 
+@inproceedings{TCPS23,
+ address = {},
+ author = {Jiangwei Wang and Lili Su and Songyang Han and Dongjin Song and Fei Miao},
+ booktitle = {ACM Transactions on Cyber-Physical Systems (TCPS)},
+ editor = {},
+ month = {June},
+ pages = {},
+ publisher = {},
+ title = {Towards Safe Autonomy in Hybrid Traffic Detecting Unpredictable Abnormal Behaviors of Human Drivers via Information Sharing},
+ year = {2023}
+}
+
+@inproceedings{TNNLS23,
+ address = {},
+ author = {Xikun Zhang and Dongjin Song and Dacheng Tao},
+ booktitle = {IEEE Transactions on Neural Networks and Learning Systems (TNNLS)},
+ editor = {},
+ month = {August},
+ pages = {},
+ publisher = {},
+ title = {Ricci Curvature based Graph Sparsification for Continual Graph Representation Learning},
+ year = {2023}
+}
+
+@inproceedings{UbiComp23,
+ address = {},
+ author = {Chinmaey Shende and Soumyashree Sahoo and Stephen Sam and Parit Patel and Reynaldo Morillo and Xinyu Wang and Shweta Ware and Jinbo Bi and Jayesh Kamath and Alexander Russell and Dongjin Song and Bing Wang},
+ booktitle = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/UbiComp)},
+ editor = {},
+ month = {October},
+ pages = {},
+ publisher = {},
+ title = {Predicting Symptom Improvement During Depression Treatment Using Sleep Sensory Data},
+ year = {2023}
+}
+
+@inproceedings{IROS23,
+ address = {},
+ author = {Muzi Peng and Jiangwei Wang and Dongjin Song and Fei Miao and Lili Su},
+ booktitle = {Proceedings of IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+ editor = {},
+ month = {},
+ pages = {},
+ publisher = {},
+ title = {Privacy-preserving and Uncertainty-aware Federated Trajectory Prediction for Connected Autonomous Vehicles},
+ year = {2023}
+}
+
+@inproceedings{KDD23,
+ address = {},
+ author = {Yushan Jiang and Wenchao Yu and Dongjin Song and Lu Wang and Wei Cheng and Haifeng Chen},
+ booktitle = {Proceedings of the 29th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
+ editor = {},
+ month = {August},
+ pages = {},
+ publisher = {},
+ title = {FedSkill Privacy Preserved Interpretable Skill Learning via Imitation},
+ year = {2023}
+}
+
+@inproceedings{ICLR23a,
+ address = {},
+ author = {Chang Li and Dongjin Song and Dacheng Tao},
+ booktitle = {Proceedings of International Conference on Learning Representations (ICLR)},
+ editor = {},
+ month = {May},
+ pages = {},
+ publisher = {},
+ title = {HiT-MDP Learning the SMDP option framework on MDPs with Hidden Temporal Variables},
+ year = {2023}
+}
+
+@inproceedings{ICLR23b,
+ address = {},
+ author = {Yang Jiao and Kai Yang and and Tiancheng Wu and Dongjin Song and Chengtao Jian},
+ booktitle = {Proceedings of International Conference on Learning Representations (ICLR)},
+ editor = {},
+ month = {May},
+ pages = {},
+ publisher = {},
+ title = {Asynchronous Distributed Bilevel Optimization},
+ year = {2023}
+}
+
+@inproceedings{CISS23,
+ address = {},
+ author = {Yushan Jiang and Wenchao Yu and Dongjin Song and Wei Cheng and Haifeng Chen},
+ booktitle = {Proceedings of the 57th Annual Conference on Information Sciences and Systems (CISS)},
+ editor = {},
+ month = {August},
+ pages = {},
+ publisher = {},
+ title = {Interpretable Skill Learning for Dynamic Treatment Regimes through Imitation},
+ year = {2023}
+}
+
+
+
 
 @inproceedings{NeurIPS22b,
  address = {},
